syntax = "proto3";

package user_center;

import "errors/errors.proto";
option go_package = "./v1;v1";


enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 200;

  // 为某个枚举单独设置错误码
  NotFoundError = 0[(errors.message)="数据不存在"];
  DatabaseError = 1[(errors.message)="数据库错误"];
  MetadataError = 2[(errors.message)="元数据异常"];
  TransformError = 3[(errors.message)="数据转换失败"];
}
 

